<resources>
    <string name="app_name">Chat</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_name">Enter name</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
</resources>