<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".presentation.authentication.RegisterFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_blue_star" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/gray"
        android:hint="@string/enter_name"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/gray"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/gray"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_btn"
        android:text="@string/register"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lblAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/lblAlreadyHaveAccount"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>