<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

  <ImageView
      android:id="@+id/logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_centerHorizontal="true"
      android:src="@drawable/ic_blue_star"
      app:tint="@color/colorPrimary" />

  <TextView
      android:id="@+id/heading"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/logo"
      android:layout_marginTop="50dp"
      android:text="@string/login_to_your_account"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="30sp"
      android:textStyle="bold" />

  <EditText
      android:id="@+id/etPhone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/heading"
      android:layout_marginTop="100dp"
      android:background="@drawable/rounded_corners"
      android:backgroundTint="@color/gray"
      android:hint="@string/enter_phone"
      android:inputType="phone"
      android:padding="12dp" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etPhone"
      android:layout_marginTop="30dp"
      android:background="@drawable/rounded_corners"
      android:backgroundTint="@color/gray"
      android:hint="@string/enter_password"
      android:inputType="textPassword"
      android:padding="12dp" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etPassword"
      android:layout_marginTop="50dp"
      android:background="@drawable/rounded_corners_blue_btn"
      android:text="@string/login"
      android:textColor="@color/white" />

  <RelativeLayout
      android:id="@+id/layoutRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="20dp"
      android:gravity="center_horizontal">

    <TextView
        android:id="@+id/lblDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/lblDontHaveAccount"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
  </RelativeLayout>

</RelativeLayout>